# my_first_pypi_package

./: README.md  pyproject.toml
nerminmemmedova/: __init__.py
