[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "narminspackage"
version = "0.0.1"
authors = [
  { name="Narmin Mammedova", email="nerminmemmedova1000@gmail.com" },
]
description = "I want to get 10 points from teacher ^_^ ^_^ ^_^"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/yourrepo"